fix: test exp api and fix error
